--- a/README
+++ b/README
@@ -8,12 +8,19 @@ sudo gem sources -a http://gems.github.com (you only have to do this once)
 sudo gem install igrigorik-language_detector
 
 == Usage
-require 'language_detector'
-d = LanguageDetector.new
-p d.detect('this text is in English')
+  require 'language_detector'
+  
+  # using generated model (built from scratch)
+  d = LanguageDetector.new
+  p d.detect('this text is in English')
+
+  # using textcat n-gram model
+  d = LanguageDetector.new('tc')
+  p d.detect('this text is in English')
 
 == Thanks
-Kevin Burton (http://feedblog.org/2005/08/19/ngram-language-categorization-source/ ). I used all the training data in his ngramcat project.
+Kevin Burton (training data)
+ - http://feedblog.org/2005/08/19/ngram-language-categorization-source/
 
 == Follow us on twitter
 
