--- a/README
+++ b/README
@@ -1,7 +1,7 @@
-== Welcome
-This is a n-gram based language detector, written in ruby. 
+== N-Gram Language Detection in Ruby
 
-For technical details about language detection, I recommend this paper: http://www.sfs.uni-tuebingen.de/iscl/Theses/kranig.pdf
+For technical details about language detection, I recommend this paper:
+- http://www.sfs.uni-tuebingen.de/iscl/Theses/kranig.pdf
 
 == Installation
 sudo gem sources -a http://gems.github.com (you only have to do this once)
@@ -21,7 +21,5 @@ sudo gem install igrigorik-language_detector
 == Thanks
 Kevin Burton (training data)
  - http://feedblog.org/2005/08/19/ngram-language-categorization-source/
-
-== Follow us on twitter
-
-http://twitter.com/feedbackmine
+Feedbackmine
+ - http://twitter.com/feedbackmine
