use a regex to tokenize strings (~30% faster)

--- a/README
+++ b/README
@@ -23,3 +23,6 @@ Kevin Burton (training data)
  - http://feedblog.org/2005/08/19/ngram-language-categorization-source/
 Feedbackmine
  - http://twitter.com/feedbackmine
+
+== Todo
+ - Make 1.9 friendly!
